--- a/src/AppBundle/Resources/public/css/bootstrap.css
+++ b/src/AppBundle/Resources/public/css/bootstrap.css
@@ -3998,9 +3998,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs {
   border-bottom: 1px solid #dddddd;
+  display: flex;
+  justify-content: space-between;
 }
 .nav-tabs > li {
-  float: left;
   margin-bottom: -1px;
 }
 .nav-tabs > li > a {
