--- a/src/AppBundle/Resources/views/Builder/tab-pane-personal.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-personal.html.twig
@@ -1,33 +1,39 @@
 
-<div class="row" id="personal_filters">
-	<!-- Search Bar -->
-	<div class="col-sm-12" style="margin-bottom:10px">
-		<input type="text" class="form-control" id="filter-text-personal" placeholder="Find a card or filter the list" tabindex="1">
-	</div>
-	 <!-- Search Bar -->
-	<div class="col-sm-12" style="margin-bottom:10px">
-      <div class="btn-group btn-group-justified" data-filter="subtype_code" data-toggle="buttons"></div>
+<div id="special-section">
+	<div class="row" id="personal_filters">
+		<!-- Search Bar -->
+		<div class="col-sm-12" style="margin-bottom:10px">
+			<div style="display: flex">
+				<div style="flex: 1;">
+					<input type="text" class="form-control" id="filter-text-personal" placeholder="Find a card or filter the list" tabindex="1">
+				</div>
+				<button class="btn btn-default" type="button" id="filter-text-personal-button">Filter help</button>
+			</div>
+		</div>
+		<!-- Search Bar -->
+		<div class="col-sm-12" style="margin-bottom:10px">
+				<div class="btn-group btn-group-justified" data-filter="subtype_code" data-toggle="buttons"></div>
+		</div>
 	</div>
 
+	<!-- Collection Table -->
+	<div class="row" id="special-collection">
+		<div class="col-sm-12">
+			<table class="table table-condensed table-hover" style="margin-bottom:10px">
+				<thead>
+					<tr>
+						<th style="min-width:85px">Quantity</th>
+						<th>Name</th>
+						<th class="xp">XP</th>
+						<th class="cost">Cost</th>
+						<th class="type">Type</th>
+						<th class="faction">Class</th>
+					</tr>
+				</thead>
+				<tbody id="special-collection-table" class="collection"></tbody>
+			</table>
+		</div><!-- /.col-sm-12 -->
+		<div id="special-collection-grid" class="col-sm-12"></div>
+	</div><!-- /.row -->
+	<!-- Collection Table -->
 </div>
-
-<!-- Collection Table -->
-<div class="row" id="special-collection">
-	<div class="col-sm-12">
-		<table class="table table-condensed table-hover" style="margin-bottom:10px">
-			<thead>
-				<tr>
-					<th style="min-width:85px">Quantity</th>
-					<th>Name</th>
-					<th class="xp">XP</th>		
-					<th class="cost">Cost</th>					
-					<th class="type">Type</th>
-					<th class="faction">Class</th>
-				</tr>
-			</thead>
-			<tbody id="special-collection-table" class="collection"></tbody>
-		</table>
-	</div><!-- /.col-sm-12 -->
-	<div id="special-collection-grid" class="col-sm-12"></div>
-</div><!-- /.row -->
-<!-- Collection Table -->
