--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -5,12 +5,12 @@
 
 <div class="main container">
 <h1 class="site-title hidden-xs">ArkhamDB</h1>
-<div class="site-slogan">Deckbuilder and Card Database for the Arkham Horror LCG</div>
+<div class="site-slogan">{% trans %}Deckbuilder and Card Database for the Arkham Horror LCG{% endtrans %}</div>
 </div> <!-- .container -->
 
 <div class="main container">
 	<div class="row col-md-6">
-		<h3>Popular Decks</h3>
+		<h3>{% trans %}Popular Decks{% endtrans %}</h3>
 		{% for data in decklists_by_popular %}
 		<div style="margin-bottom:10px; ">
 			<div class="bg-faction faint-{{ data.faction.code }}" style="padding:4px; height: 24px;">
@@ -51,7 +51,7 @@
 	</div>
 	
 	<div class="row col-md-6" style="margin-left: 5px;">
-		<h3>Recent Decks</h3>
+		<h3>{% trans %}Recent Decks{% endtrans %}</h3>
 		{% for data in decklists_by_recent %}
 		<div style="margin-bottom:10px; ">
 			<div class="bg-faction faint-{{ data.faction.code }}" style="padding:4px; height: 24px;">
