--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -126,6 +126,9 @@
 	<li><a href="#Heal">Heal</a></li>
 	<li><a href="#Health_and_Damage">Health and Damage</a></li>
 	<li><a href="#Hidden">Hidden</a></li>
+		<ul>	
+		<li><a href="#Hidden_Cards_in_Hand_When_Eliminated">Hidden Cards in Hand When Eliminated</a></li>
+		</ul>
 	<li><a href="#Hunter">Hunter</a></li>
 	<li><a href="#If">If</a></li>
 	<li><a href="#Immune">Immune</a></li>
@@ -147,6 +150,9 @@
 		<li><a href="#Limits_Pertaining_to_Play_Areas">Limits Pertaining to Play Areas</a></li>
 		</ul>
 	<li><a href="#Location_Cards">Location Cards</a></li>
+		<ul>	
+		<li><a href="#Being_at_No_Location">Being at No Location</a></li>
+		</ul>
 	<li><a href="#Lola_and_Roles">Lola and "Roles"</a></li>
 	<li><a href="#Massive">Massive</a></li>
 	<li><a href="#May">May</a></li>
@@ -228,6 +234,9 @@
 	<li><a href="#Winning_and_Losing">Winning and Losing</a></li>
 	<li><a href="#The_letter_X">The letter "X"</a></li>
 	<li><a href="#You_Your">You/Your - Expanded</a></li>
+		<ul>	
+		<li><a href="#Interpreting_You_When_Taking_or_Being_Dealt_Damage">Interpreting "You" When Taking or Being Dealt Damage</a></li>
+		</ul>
 	</ul>
 <li><a href="#Appendix_I_Initiation_Sequence">Appendix I: Initiation Sequence</a></li>
 <li><a href="#Appendix_II_Timing_and_Gameplay">Appendix II: Timing and Gameplay</a></li>
@@ -258,7 +267,7 @@
 
 <h2 id="Intro">A Note from ArkhamDB</h2>
 
-<p>This page contains a replica of the Rules Reference found in any copy of the Core Set of Arkham Horror: The Card Game. It also includes updates to the Rules Reference: rules added in deluxe expansions (marked in red) and rules added in the official FAQ for the game (marked in blue).</p>
+<p>This page contains a replica of the Rules Reference found in any copy of the Core Set of Arkham Horror: The Card Game. It also includes updates to the Rules Reference: rules added in deluxe expansions <span style="color:red">(marked in red)</span> and rules added in the official FAQ for the game <span style="color:blue">(marked in blue)</span>.</p>
 
 <h1 id="The_Thing_That_Should_Not_Be">The Thing That Should Not Be...</h1>
 
@@ -957,6 +966,8 @@
 
 </ul>
 
+<p> See also "<a href="#Interpreting_You_When_Taking_or_Being_Dealt_Damage">Interpreting "You" When Taking or Being Dealt Damage</a>".</p>
+
 <h2 id="Deck">Deck</h2>
 
 <p>There are 4 main types of decks that appear in any game: the Investigator Deck, the Encounter Deck, the Act Deck, and the Agenda Deck.</p>
@@ -1531,6 +1542,10 @@
 
 <p>For the best experience, players are encouraged to stay "in character" and not share information about hidden cards in their hand.</p>
 
+<h3 id="Hidden_Cards_in_Hand_When_Eliminated" style="color:blue">Hidden Cards in Hand When Eliminated (added in FAQ, section 'Game Play', point 1.22)</h3>
+
+<p>When an investigator is eliminated, each encounter card in their hand with the hidden keyword should be placed in the encounter discard pile, in the same way as encounter cards in their threat area.</p>
+
 <h2 id="Hunter">Hunter</h2>
 
 <p>Hunter is a keyword ability.</p>
@@ -1767,6 +1782,10 @@
 
 </ul>
 
+<h3 id="Being_at_No_Location" style="color:blue">Being at No Location (added in FAQ, section 'Game Play', point 1.21)</h3>
+
+<p>Unless explicitly specified by game text, enemies and investigators must always be at a location during gameplay. If an effect (such as a "cannot move" effect) would cause an investigator or enemy to not be at a location, ignore that effect.</p>
+
 <h2 id="Lola_and_Roles" style="color:red">Lola and "Roles" (added in <em>The Path to Carcosa</em>)</h2>
 
 <p>As a renowned actress, Lola Hayes can play many different roles. At the beginning of each scenario, after investigators draw opening hands, Lola Hayes must choose a role (Neutral, Guardian, Seeker, Rogue, Mystic, or Survivor). Lola can only play cards, commit cards to skill tests, or trigger [action], [fast], or [reaction] abilities on Neutral cards or cards whose class matches her role. This restriction only applies to player cards, not to encounter cards or weaknesses. Note that Constant and <b>Forced</b> abilities remain active on cards whose class does not match Lola's role.</p>
@@ -1863,7 +1882,7 @@
 
 <li>  <b>Investigators from The Dunwich Legacy expansion <i>(i.e. Zoey Samaras, Rex Murphy, Jenny Barnes, Jim Culver, "Ashcan" Pete)</i>:</b> A multi-class card will not occupy one of these investigator’s five "out of class" slots if one of its classes is the class they have unlimited access to. A card cannot take up more than one "out of class" slot, regardless of how many class icons the card bears.</li>
 
-<li>  <b>Investigators with unlimited access to one class and limited access to one or more "other" classes <i>(i.e. Marie Lambeau, Finn Edwards, Carolyn Fern)</i>:</b> A multi-class card will not occupy one of the investigator’s limited slots, because it falls into the unlimited category <i>(see <a href="#Deckbuilding_Options">Deckbuilding Options</a>)</i>.</li>
+<li>  <b>Investigators with unlimited access to one class and limited access to one or more "other" classes <i>(i.e. Marie Lambeau, Finn Edwards, Carolyn Fern, investigators from Edge of the Earth)</i>:</b> A multi-class card will not occupy one of the investigator’s limited slots, because it falls into the unlimited category <i>(see <a href="#Deckbuilding_Options">Deckbuilding Options</a>)</i>.</li>
 
 <li>  <b>Investigators with unlimited access to one class and limited access to a second class, without using the word "other" <i>(i.e. Norman Withers)</i>:</b> A multi-class card will occupy one of the investigator’s limited slots, even if it also falls into the unlimited category.</li>
 
@@ -2702,6 +2721,12 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 <br>[action]: Test [willpower] (3). If you succeed, Discard Dreams of R’lyeh."</i></p>
 
 <p>These three abilities reference "you/your" in different ways. For the <b>Revelation</b> ability, "your" refers to the investigator who drew Dreams of R’lyeh and is resolving its <b>Revelation</b>. For its constant ability, "you" refers to the investigator who has Dreams of R’lyeh in his or her threat area. For its [action] ability, "you" refers to the investigator who is performing the [action] ability.</p>
+
+<h3 id="Interpreting_You_When_Taking_or_Being_Dealt_Damage" style="color:blue">Interpreting "You" When Taking or Being Dealt Damage (added in FAQ, section 'Card Ability Interpretation', point 2.12)</h3>
+
+<p>When an ability refers to "you" in response to taking damage or being dealt damage, it also includes any assets you control.</p>
+
+<p><i>For example: The [reaction] ability on Survival Knife triggers "after an enemy attack deals damage to you during the enemy phase." This ability triggers even if the damage from that attack is assigned to one or more of your assets, and not your investigator card. However, if all of the damage from that attack is assigned to another investigator or their assets (through the use of a card effect that allows them to do so), then no damage has been dealt to you.</i></p>
 
 <h1 id="Appendix_I_Initiation_Sequence">Appendix I: Initiation Sequence</h1>
 
