--- a/src/AppBundle/Resources/views/Modale/card.html.twig
+++ b/src/AppBundle/Resources/views/Modale/card.html.twig
@@ -9,11 +9,11 @@
                     <div class="col-sm-4 text-center modal-deck-qty">
                         Deck Quantity: <div class="btn-group modal-qty" data-toggle="buttons"></div>
                     </div>
-                    <div class="col-sm-4 text-center modal-deck-ignore">
-                        Ignore Limit: <div class="btn-group modal-ignore" data-toggle="buttons"></div>
-                    </div>
                     <div class="col-sm-4 text-center modal-side-deck-qty">
                         Side Deck Quantity: <div class="btn-group modal-side-qty" data-toggle="buttons"></div>
+                    </div>
+                    <div class="col-sm-4 text-center modal-deck-ignore">
+                        Ignore Deck Limit: <div class="btn-group modal-ignore" data-toggle="buttons"></div>
                     </div>
                 </div>
             </div>
