--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -57,6 +57,10 @@
 			<label for="taboo">Class Select</label>
 			<select class="form-control" data-filter="faction_selector"></select>
 		</div>
+		<div id="option_selector" class="form-group" style="display: none;">
+			<label for="taboo" id="option_selector_name">Option Select</label>
+			<select class="form-control" data-filter="option_selector"></select>
+		</div>
 		<div id="front_selector" class="form-group" style="display: none;">
 			<label for="taboo">Alternate Investigator Front (Changes ability, stats and art)</label>
 			<select class="form-control" data-filter="front_selector"></select>
