Add support for specifying the 'id' of the selector for Charlie Kane

--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -57,6 +57,9 @@
 			<label for="taboo">Class Select</label>
 			<select class="form-control" data-filter="faction_selector"></select>
 		</div>
+		<div id="faction_selector_2" class="form-group" style="display: none;">
+			<select class="form-control" data-filter="faction_selector_2"></select>
+		</div>
 		<div id="option_selector" class="form-group" style="display: none;">
 			<label for="taboo" id="option_selector_name">Option Select</label>
 			<select class="form-control" data-filter="option_selector"></select>
