Initial implementation of customizable cards
Store 'choices' inside deck.meta as 'cus_#####'
Basic format is a comma separated list of entries.

Each entry is further separated by |, in the format
`index|xp|secondary_choice`

For most entries, secondary_choice is blank, but it can
be used to hold more advanced things (like remove_slot)
We can hold more things in the future this way as well

DB changes:
- Add two fields to Card, 'customization_options' and 'customization_text'. The second
is localizable and we treat them as parallel arrays after splitting text by \n.
- Add one field to Deckchange, meta. This is used for the 'Revert' function of deck history.
The variation field also grows from being an array of length 2 to one of length 4, but this
doesn't impact the database, only the JS/PHP code.

- Encodings with XP cost and qualities that might impact gameplay are stored in new field
'customization_options'.

--- a/src/AppBundle/Resources/public/css/bootstrap.css
+++ b/src/AppBundle/Resources/public/css/bootstrap.css
@@ -5916,6 +5916,10 @@ button.close {
   position: relative;
   padding: 20px;
 }
+.modal-customization {
+  position: 'relative';
+  padding: 20px;
+}
 .modal-footer {
   padding: 20px;
   text-align: right;
