--- a/src/AppBundle/Resources/views/Modale/card.html.twig
+++ b/src/AppBundle/Resources/views/Modale/card.html.twig
@@ -23,6 +23,8 @@
                     <div class="col-sm-6 modal-info card-content"></div>
                 </div>
             </div>
+            <div class="modal-customization">
+            </div>
             <div class="modal-footer">
                 <a role="button" href="#" class="btn btn-default card-modal-link">Go to card page</a>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
