--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -28,6 +28,9 @@ body {
 .card-traits, .card-text i {
 	font-style: italic;
 }
+.invalid-card {
+	text-decoration: line-through;
+}
 .card-text {
 	border-left-width: 2px;
 	border-left-style: solid;
@@ -59,6 +62,9 @@ body {
 
 .taboo {
 	color : purple;
+}
+.custom {
+	color : orange;
 }
 
 .table-expanded>thead>tr>th, .table-expanded>tbody>tr>th, .table-expanded>tfoot>tr>th, .table-expanded>thead>tr>td, .table-expanded>tbody>tr>td, .table-expanded>tfoot>tr>td {
