--- a/src/AppBundle/Resources/views/Search/card-back.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-back.html.twig
@@ -19,7 +19,7 @@
 			{% if card.back_flavor or card.back_text %}
   		<div class="panel-body card-content border-{{ card.faction_code }}">
   			<span class="card-type">{{ card.type_name }}</span>
-  			{% if card.type_code == 'agenda' or card.type_code == 'act' %}	
+  			{% if card.type_code == 'agenda' or card.type_code == 'act' %}
 					{% if card.back_flavor %}
 					<div class="card-flavor small{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %}">
 					{{ card.back_flavor|raw|nl2br }}
@@ -55,4 +55,21 @@
 	</div>
 </div>
 {% endif %}
-
+{% if card.customization_text %}
+<div class="col-sm-7" style="margin-bottom:2em">
+	<div>
+		<div class="panel panel-default border-{{ card.faction_code }} {% if card.faction2_code is defined %} border-dual {% endif %}">
+			<div class="panel-heading border-{{ card.faction_code }} bg-{{ card.faction_code }} {% if card.faction2_code is defined %} bg-dual border-dual{% endif %}">
+				<h3 class="panel-title">
+					<div>{% trans %}Customizations{% endtrans %}</div>
+				</h3>
+  		</div>
+  		<div class="panel-body card-content border-{{ card.faction_code }}">
+				<div class="card-text border-{{ card.faction_code }}">
+  				{{ card.customization_text|raw }}
+				</div>
+  		</div>
+		</div>
+	</div>
+</div>
+{% endif %}
