More adjustments for treachery subname

--- a/src/AppBundle/Resources/views/Search/card-name-with-link.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-name-with-link.html.twig
@@ -1,4 +1,5 @@
 {% if card.is_unique == true %}<span class="icon-unique"></span> {% endif %}
 <a href="{{ card.url }}" class="card-name card-tip{% if card.available == false %} card-preview{% endif %}{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %}" data-code="{{ card.code }}">{{ card.name }}
+{% if card.subname and card.type_code == "treachery" %} ({{ card.subname }}){% endif %}
 </a>
-{% if card.subname %}<div class="card-subname small{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %}">{{ card.subname }}</div> {% endif %}
+{% if card.subname and card.type_code != "treachery" %}<div class="card-subname small{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %}">{{ card.subname }}</div> {% endif %}
