--- a/src/AppBundle/Resources/views/Search/display-list.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-list.html.twig
@@ -21,7 +21,7 @@
 	<td data-th="Name">
 		<span class="icon icon-{{ card.type_code}} fg-{{ card.faction_code }}"></span>
 		<a href="{{ card.url }}" class="{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %} card-tip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">
-		{{ card.name }}{% if card.subname%}: {{ card.subname }}{% endif %}</a>
+		{{ card.name }}{% if card.subname%}{% if card.type_code == "treachery" %} ({{ card.subname }}){% else %}: {{ card.subname }}{% endif %}{% endif %}</a>
 		{% if card.xp %}<span class="xp-{{ card.xp }}"> ({{ card.xp }})</span>{% endif %}
 	</td>
 	<td data-th="Faction" style="width : 100px;" class="fg-{{ card.faction_code }}"><span class="icon-{{card.faction_code}}"></span>{% if card.faction2_code is defined %}<span class="icon-{{card.faction2_code}}"></span>{% if card.faction3_code is defined %}<span class="icon-{{card.faction3_code}}"></span> {% endif %} {% else %} {{ card.faction_name }} {% endif %}  </td>
@@ -30,18 +30,18 @@
 	<td data-th="Stats" style="width : 70px;">
 	<span class="{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %}">
 	{% if card.type_code == "investigator" %}
-	
+
 	{% elseif card.type_code == "enemy2" %}
 	{% if card.enemy_fight %}<b>Fight</b>: {{ card.enemy_fight }}{% endif %}
 	{% if card.health %}<b>Health</b>:{{ card.health }}{% if card.health_per_investigator %}<span class="icon icon-per_investigator"></span>{% endif %}{% endif %}
 	{% if card.enemy_evade %}<b>Evade</b>: {{ card.enemy_evade }}{% endif %}
 	{% elseif card.type_code == "location2" %}
 	{% if card.shroud %}<b>Shroud</b>: {{ card.shroud }}<span title="Shroud" class="icon icon-shroud color-shroud"></span>{% endif %}
-	{% if card.clues %}<b>Clues</b>: {{ card.clues }}<span title="Clues" class="icon icon-clues color-clues"></span>{% endif %}	
+	{% if card.clues %}<b>Clues</b>: {{ card.clues }}<span title="Clues" class="icon icon-clues color-clues"></span>{% endif %}
 	{% elseif card.type_code == "agenda2" %}
 	{% if card.doom %}<b>Doom</b>: {{ card.doom }}<span title="Doom" class="icon icon-doom color-doom"></span>{% endif %}
 	{% elseif card.type_code == "act2" %}
-	{% if card.clues %}<b>Clues</b>: {{ card.clues }}<span title="Clues" class="icon icon-clues color-clues"></span>{% endif %}	
+	{% if card.clues %}<b>Clues</b>: {{ card.clues }}<span title="Clues" class="icon icon-clues color-clues"></span>{% endif %}
 	{% else %}
 	{% if card.skill_willpower %}{% for i in 1..card.skill_willpower %}<span title="Willpower" class="icon icon-willpower color-willpower"></span> {% endfor %}{% endif %}
 	{% if card.skill_intellect %}{% for i in 1..card.skill_intellect %}<span title="Intellect" class="icon icon-intellect color-intellect"></span> {% endfor %}{% endif %}
